--- a/dscovr-ace-visualizer/style.css
+++ b/dscovr-ace-visualizer/style.css
@@ -59,6 +59,9 @@ body {
   margin-top: 1rem;
   margin-bottom: 1rem;
   background-color: #000000;
+  border-radius: .3em;
+  padding: .4rem;
+  box-shadow: 0px 0px 2px 1px #FFFFFF;
 }
 
 
