--- a/guessing/style.css
+++ b/guessing/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-
+    background-color: darkslategrey;
 }
 
 .wrapper {
@@ -14,61 +14,72 @@ body {
     border-radius: 5%;
     box-shadow: 5px 10px 5px;
     width: 25em;
+    background-color: whitesmoke;
 }
 
 .count {
     box-sizing: border-box;
     border: 1px solid black;
     margin: 50px 30px 40px 30px;
-    
+
 }
 
 .title {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 2em;
+    font-weight: bold;
+    margin: 0;
+ 
 }
 
 .subtitle {
-    text-decoration-line: underline;
+ 
+    font-size: 1em;
 }
 
 .guess-input {
-
+    margin: 0 30px 0 30px;
+    padding: 0 30px 0 30px;
+    border: 1px solid black;
+    border-radius: 5%;
+    font-size: 2em;
+    width: 50%;
 }
 
 .guess-button {
+    background-color: darkslategrey;
+    color: white;
+    border: 3px solid black;
+    border-radius: .4em;
+    box-shadow: 5px 10px 5px;
+    margin: 10px;
+    padding: 5px;
+    font-size: 1.5em;
+}
 
+.guess-button:hover {
+    background-color: rgba(0, 0, 0, 0.738);
 }
 
 .feedback {
-
+    font-size: 1.5em;
 }
 
-.guess-list {
-
-}
- 
-.counter-title {
-
+ul {
+    list-style-type: none;
+    font-size: 2rem;
 }
 
 .reset-button {
-    
+    margin: 2em;
 }
 
-.you-lose{
-    /* width: 200px;
-    height: 200px; */
-    /* visibility: hidden; */
+.you-lose {
     background-image: url(baldman.png);
 }
-
-/* Material Icons */
-
-
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 1,
-  'wght' 700,
-  'GRAD' 0,
-  'opsz' 48
+    font-variation-settings:
+        'FILL' 1,
+        'wght' 700,
+        'GRAD' 0,
+        'opsz' 48
 }
