--- a/musical-matter/style.css
+++ b/musical-matter/style.css
@@ -9,8 +9,8 @@ body {
     align-items: center;
 }
 
-canvas {
-    width: 500px;
-    height: 400px;
-    background-color: white;
+#canvas {
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
