--- a/dscovr-ace-visualizer/style.css
+++ b/dscovr-ace-visualizer/style.css
@@ -51,7 +51,13 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #000000;
-  padding: .4rem;
+  padding: 1em;
+  width: 100%;
+  height: 90px;
+}
+
+header {
+  width: 100%;
 }
 
 .anchor-style {
@@ -65,7 +71,6 @@ body {
   align-items: center;
   margin: auto;
   margin-top: 2rem;
-  max-width: 800px;
   min-width: 400px;
   min-height: 400px;
   color: white;
@@ -87,17 +92,13 @@ body {
   position: relative;
 }
 
-.footer {
-  background-color: #000000;
-  color: whitesmoke;
-  height: 50px;
-}
-
 /* Highcharts */
 
 .highcharts-figure,
 .highcharts-data-table table {
   margin: 0 auto;
+  display: flex;
+  justify-content: center;
 }
 
 .highcharts-data-table table {
