--- a/dscovr-ace-visualizer/style.css
+++ b/dscovr-ace-visualizer/style.css
@@ -38,8 +38,8 @@ body {
   min-width: 300px;
   min-height: 300px;
   /* Must match chart.height and chart.width in script3.js */
-  width: 1000px;
-  height: 1000px;
+  width: 100%;
+  height: 100%;
   margin-top: 1rem;
   margin-bottom: 1rem;
   background-color: black;
