--- a/dscovr-ace-visualizer/style.css
+++ b/dscovr-ace-visualizer/style.css
@@ -38,8 +38,8 @@ body {
   min-width: 300px;
   min-height: 300px;
   /* Must match chart.height and chart.width in script3.js */
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   margin-top: 1rem;
   margin-bottom: 1rem;
   background-color: black;
@@ -50,7 +50,6 @@ body {
   flex-flow: row;
   justify-content: center;
   align-items: center;
-  background-color: #000000;
   padding: 1em;
   width: 100%;
   height: 90px;
@@ -74,7 +73,6 @@ header {
   min-width: 400px;
   min-height: 400px;
   color: white;
-  background-color: black;
   padding: 2rem;
 }
 
