--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,6 @@ body {
   display: flex;
   min-width: 300px;
   flex-direction: column;
-  background: linear-gradient(281deg, rgba(10, 5, 89, 1) 0%, rgba(26, 89, 120, 1) 47%, rgba(0, 198, 255, 1) 100%);
-  font-family: 'Source Code Pro', monospace;
-  color: white;
 }
 
 body a {
@@ -83,7 +80,7 @@ main p {
 main {
   margin: 1em;
   min-height: 1080px;
-  color: white;
+  color: #000;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -99,12 +96,10 @@ main {
   white-space: nowrap;
   padding: .5em;
   position: relative;
-  color: white;
   border-bottom: .7em groove hsla(206, 88%, 55%, 1);
   border-radius: .3em;
   transition-delay: 2s;
   text-align: center;
-  transform: rotate(-6deg);
   transition: all .8s ease-out;
   margin-bottom: 1em;
 
@@ -112,14 +107,13 @@ main {
 
 .name-logo:hover {
   transition: all 1s ease-in;
-  transform: rotate(-0deg);
-  border-bottom: .8em groove rgba(175, 72, 193, 0.815);
+
 }
 
 .name-logo a {
   display: block;
   text-decoration: none;
-  color: white;
+  color: #000;
 }
 
 .sub-heading {
@@ -153,8 +147,6 @@ main {
 
 }
 
-
-
 .bean-img {
   width: 100%;
   display: inline-block;
@@ -173,8 +165,6 @@ main {
   z-index: 1;
   transition: all 1s ease-in;
 }
-
-
 
 /* ABOUT */
 
@@ -231,11 +221,10 @@ main {
 }
 
 .about-text {
-  color: white;
+  color: #000;
   overflow-wrap: break-word;
   /* https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Text/Wrapping_Text */
 }
-
 
 /* ----- FOOTER ----- */
 
